--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
 
             <div class="bg-video">
                 <video class="bg-video__content" autoplay loop muted>
-                    <source src="mboutique/images/sugar.mp4" type='video/mp4'>
-                    <source src="mboutique/images/suger.webm" type="video/webm"> Your browser is not supported!
+                    <source src="mboutique/images/Sugar.mp4" type='video/mp4'>
+                    <source src="mboutique/images/Sugar.webm" type="video/webm"> Your browser is not supported!
                 </video>
             </div>
             <div class="u-center-text u-margin-bottom-big">
