changed footer text

--- a/index.html
+++ b/index.html
@@ -397,8 +397,8 @@
     <div class="popup" id="popup">
         <div class="popup__content">
             <div class="popup__left">
-                <img src="mboutique/images/mac-7.jpg" alt="Tour Photo" class="popup__img">
-                <img src="mboutique/images/mac-8.jpg" alt="Tour Photo" class="popup__img">
+                <img src="mboutique/images/mac-7.jpg" alt="Macaron Photo" class="popup__img">
+                <img src="mboutique/images/mac-8.jpg" alt="Macaron Photo" class="popup__img">
             </div>
             <div class="popup__right">
                 <a href="#section-tours" class="popup__close">&times;</a>
