--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
             <div class="col-1-of-2">
                 <p class="footer__copyright">
                     
-                    <a href="#" class="footer__link">Built by Matt Barnett</a> <br>
+                    <a href="http://www.mattbarnett.io" class="footer__link">Built by Matt Barnett</a> <br>
                     <a href="#" class="footer__link">Design by Jonas Schmedtman & Matt Barnett</a>. 
                 </p>
             </div>
