added alt tags to images

--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
 
                 <div class="col-1-of-2">
                     <div class="composition">
-                        <img src="mboutique/images/mac-1.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-                        <img src="mboutique/images/mac-2.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-                        <img src="mboutique/images/mac-3.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+                        <img src="mboutique/images/mac-1.jpg" alt="Macaron Photo 1" class="composition__photo composition__photo--p1">
+                        <img src="mboutique/images/mac-2.jpg" alt="Macaron Photo 2" class="composition__photo composition__photo--p2">
+                        <img src="mboutique/images/mac-3.jpg" alt="Macaron Photo 3" class="composition__photo composition__photo--p3">
                     </div>
                 </div>
             </div>
@@ -278,7 +278,7 @@
             <div class="row">
                 <div class="story">
                     <figure class="story__shape">
-                        <img src="mboutique/images/party-2.jpg" alt="person on a tour" class="story__img">
+                        <img src="mboutique/images/party-2.jpg" alt="party tray" class="story__img">
                         <figcaption class="story__caption">Mary Smith</figcaption>
                     </figure>
                     <div class="story__text">
