--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
 
     <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
+    <style type="text/css">
+        .no-fouc {display: none;}
+    </style>
+
     <link rel="shortcut icon" type="image/png" href="mboutique/images/passion-fruit.png">
 
     <title>Mboutique | Macaroons</title>
 </head>
 
 <body>
-    <div class="navigation">
+    <div class="navigation no-fouc">
         <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
 
         <label for="navi-toggle" class="navigation__button">
@@ -467,7 +471,15 @@
                 </div>
             </div>
         </section> -->
+        <script src="https://code.jquery.com/jquery-3.1.0.js"></script>
+        <script type="text/javascript">
 
+            document.documentElement.className = 'no-fouc';
+            $(document).ready(function(){
+                $('.no-fouc').removeClass('no-fouc');
+            })
+            // add to document ready: $('.no-fouc').removeClass('no-fouc');
+        </script>
 </body>
 
 </html>
